<resources>
    <string name="app_name">Family Map Client</string>
    <string name="user_name">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender </string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="hostname">Server Host</string>
    <string name="port_number">Server Port</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="invalid_login">Incorrect username or password</string>
    <string name="empty_entry">Empty entry</string>
    <string name="invalid_credentials">Username Already Exists</string>
    <string name="successful_register">Registration Successful</string>
    <string name="successful_login">Login Successful</string>
    <string name="bad_data">No data return</string>
    <string name="retrieved_data">Data Retrieval Successful</string>
    <string name="Uploaded_data">Data Stored Successfully</string>
    <string name="data_upload_failed">Data Storage Failed</string>
    <string name="default_host">10.0.2.2</string>
    <string name="default_port">8080</string>
    <string name="icon_description">icon image</string>
    <string name="life_story_title">Life Story</string>
    <string name="life_story_description">Show Life Story Lines</string>
    <string name="family_tree_title">Family Tree</string>
    <string name="family_tree_description">show family tree lines</string>
    <string name="spouse_description">show spouse line</string>
    <string name="spouse_title">Spouse</string>
    <string name="father_description">show events on father\'s side</string>
    <string name="father_title">Father\'s Family Tree</string>
    <string name="mother_description">show events on mother\'s side</string>
    <string name="mother_title">Mother\'s Family Tree</string>
    <string name="male_description">display male events</string>
    <string name="male_title">Male Events</string>
    <string name="female_description">display female events</string>
    <string name="female_title">Female Events</string>
    <string name="logout_description">Return to login</string>
    <string name="logout_title">Logout</string>
    <string name="info_box_default_message">Click Events for Details</string>
    <string name="search_icon_description">search_icon</string>
    <string name="settings_icon_description">settings_icon</string>
    <string name="info_box_default_description">Change map filters in settings</string>
    <string name="events_list_title">LIFE EVENTS</string>
    <string name="family_list_title">FAMILY</string>
    <string name="role_father">Father</string>
    <string name="role_mother">Mother</string>
    <string name="role_spouse">Spouse</string>
    <string name="role_child">Child</string>
    <string name="event_list_title_settings_off">Event Setting Turned Off</string>

</resources>