<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/main_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_color"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/app_name"/>

    </androidx.appcompat.widget.Toolbar>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/hostname" />

        <EditText
            android:id="@+id/prompt_hostname"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:inputType="text"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/default_host"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="40dp"
            android:text="@string/port_number" />

        <EditText
            android:id="@+id/prompt_port_number"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_marginBottom="40dp"
            android:inputType="number"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/default_port"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/prompt_user_name"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:inputType="text"
            android:layout_gravity="start"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/password" />
        <EditText
            android:id="@+id/prompt_password"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/email" />
        <EditText
            android:id="@+id/prompt_email"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />
        <EditText
            android:id="@+id/prompt_first_name"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:inputType="text"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/last_name" />
        <EditText
            android:id="@+id/prompt_last_name"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:inputType="text"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/gender" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female" />
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male" />

        </RadioGroup>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:id="@+id/sign_in_button"
            android:background="@drawable/buttons"
            android:text="@string/sign_in" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            android:background="@drawable/buttons"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>